sas-core/main/default/objects/Refund_Request__c/Refund_Request__c.object-meta.xml
<CustomObject>
    <label>Refund Request</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Refund Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refund Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>