sas-core/main/default/objects/Refund_Request__c/fields/Booked_Via__c.field-meta.xml
<CustomField>
    <fullName>Booked_Via__c</fullName>
    <label>Booked Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>