sas-core/main/default/objects/Refund_Request__c/fields/Cancel_Direction__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Direction__c</fullName>
    <label>Cancel Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>