sas-core/main/default/objects/Refund_Request__c/fields/Cancel_Entire_Booking__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Entire_Booking__c</fullName>
    <label>Cancel Entire Booking</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Already Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>