sas-core/main/default/objects/Refund_Request__c/fields/Country_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Purchase__c</fullName>
    <label>Country of Purchase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>