sas-core/main/default/objects/Refund_Request__c/fields/Created_Date_in_UTC__c.field-meta.xml
<CustomField>
    <fullName>Created_Date_in_UTC__c</fullName>
    <formula>TEXT( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created Date in UTC</label>
    <type>Text</type>
</CustomField>