sas-core/main/default/objects/Refund_Request__c/fields/Refund_Macro__c.field-meta.xml
<CustomField>
    <fullName>Refund_Macro__c</fullName>
    <label>Refund Macro</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>1 - REFUND TAX</fullName>
            </value>
            <value>
                <fullName>2 - REFUND PART</fullName>
            </value>
            <value>
                <fullName>3 - REFUND FLEX+RESTRICT</fullName>
            </value>
            <value>
                <fullName>4 - REFUNDS 24 HRS</fullName>
            </value>
            <value>
                <fullName>5 - REFUND 24/12 HRS</fullName>
            </value>
            <value>
                <fullName>6 - REFUND Residual Value</fullName>
            </value>
            <value>
                <fullName>7 - REFUND FLEX</fullName>
            </value>
            <value>
                <fullName>8 - REFUND EB</fullName>
            </value>
            <value>
                <fullName>9 - REFUND IRR</fullName>
            </value>
            <value>
                <fullName>10 - CANCELLED BY</fullName>
            </value>
            <value>
                <fullName>11 - CANCELLED ONLINE ON BEHALF OF CUSTOMER</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>