sas-core/main/default/objects/Refund_Request__c/fields/Refund_Not_Claimed_Elsewhere__c.field-meta.xml
<CustomField>
    <fullName>Refund_Not_Claimed_Elsewhere__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether customer has checked the box &quot;I have not received or claimed a refund from others or my Travel Agent&quot; when submitting a refund claim on the website.</description>
    <inlineHelpText>Whether customer has checked the box &quot;I have not received or claimed a refund from others or my Travel Agent&quot; when submitting a refund claim on the website.</inlineHelpText>
    <label>Refund Not Claimed Elsewhere</label>
    <type>Checkbox</type>
</CustomField>