sas-core/main/default/objects/Refund_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Travel Agent Tickets</fullName>
            </value>
            <value>
                <fullName>Wrongly refunded - Past Date</fullName>
            </value>
            <value>
                <fullName>Refund not received</fullName>
            </value>
            <value>
                <fullName>Reserved Amount</fullName>
            </value>
            <value>
                <fullName>Gift Card</fullName>
            </value>
            <value>
                <fullName>Passenger bank details</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>