sas-core/main/default/objects/Refund_Request__c/fields/Request_Type_Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Request_Type_Sub_Category__c</fullName>
    <label>Request Type - Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Request_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>USA</fullName>
            </value>
            <value>
                <fullName>China</fullName>
            </value>
            <value>
                <fullName>Europe &amp; Rest of World</fullName>
            </value>
            <value>
                <fullName>Webform Request</fullName>
            </value>
            <value>
                <fullName>Forsvaret</fullName>
            </value>
            <value>
                <fullName>24 hour</fullName>
            </value>
            <value>
                <fullName>SC under 180 min</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>OK in SRS</fullName>
            </value>
            <value>
                <fullName>Not in SRS</fullName>
            </value>
            <value>
                <fullName>Already sent documentation for waiver</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>IBP or RC</fullName>
            </value>
            <value>
                <fullName>Voucher</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>