sas-core/main/default/objects/Refund_Request__c/fields/Ticket_Numbers__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Numbers__c</fullName>
    <label>Ticket Numbers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>